--- a/src/scss/base/forms/select.scss
+++ b/src/scss/base/forms/select.scss
@@ -70,7 +70,7 @@
 		border-radius:0 0 18px 18px;
 		min-width: 100%;
 		left: 0;
-		background: black;
+		background:rgba(0, 0, 0, 0.9);
 		border-top: 0;
 		padding: 10px 0px 5px 0px;
 	}
