добавлена ссылка на макет

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1007,7 +1007,8 @@
             @media (max-width:$mobile){
                  transform: rotate(90deg); 
                  filter: blur(120px);
-                 left: 20%;
+                 left: 30%;
+                 top: 20%;
             }
         }
     }
