--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -33,10 +33,11 @@
 	&__item {
 		position: relative;
 		margin: rem(20) rem(8);
-		&:last-child{
+		&._with-sub-menu{
 			&:hover{
 				.menu__sub-list {
 					display: block;
+					background-color: rgb(0, 0, 0);
 				}
 			}
 		}
@@ -65,10 +66,25 @@
 		padding-top: rem(15);
 		display: none;
 		position: absolute;
+		z-index: 4;
 		width: 100%;
-		left: rem(12);
+		left: rem(0);
 		top: rem(40);
-		background-color: rgb(6, 0, 6);
+		border-radius: 12px;
+		background-color: rgba(255, 255, 255, 0.08);
+		@media (max-width:$mobile){
+			background-color: rgb(0, 0, 0);
+		}
+		li{
+			padding: rem(10);
+			color: rgba($color: white, $alpha: 0.7);
+			transition: all 0.3s ease 0s;
+			@media (any-hover: hover){
+				&:hover{
+					color: rgba($color: white, $alpha: 1);
+				}
+			}
+		}
 	}
 }
 
@@ -123,7 +139,8 @@
 }
 
 html.menu-open .menu__list {
-	display: block;
+	display: flex;
+	flex-direction: column;
 	position: absolute;
 	z-index: 14;
 	width: 100%;
