--- a/css/style.css
+++ b/css/style.css
@@ -1257,23 +1257,23 @@ html.menu-open .menu__list {
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 81.3194444444%;
-  padding-bottom: 64.0277777778%;
+  width: 93.4722222222%;
+  padding-bottom: 77.9861111111%;
+  -webkit-filter: blur(200px);
+          filter: blur(200px);
 }
 
 .no-webp .metrics__blur-bg::after{
-  background: url("../img/testbg1.png") center/cover no-repeat; }
+  background: url("../img/testbg1.png") center no-repeat; }
 
 .metrics__blur-bg::after {
   position: absolute;
-  z-index: -1;
   content: "";
+  z-index: -1;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
-  -webkit-filter: blur(20px);
-          filter: blur(20px);
 }
 
 .box-metrics {
@@ -3313,11 +3313,6 @@ html.menu-open .menu__list {
     gap: 0.5rem;
   }
 
-  .metrics__blur-bg::after {
-    -webkit-filter: blur(80px);
-            filter: blur(80px);
-  }
-
   .box-metrics__upper {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 100%;
@@ -5033,6 +5028,6 @@ html.menu-open .menu__list {
   }
 }
 
-.webp .metrics__blur-bg::after{ background: url(../img/testbg1.webp) center/cover no-repeat; }
+.webp .metrics__blur-bg::after{ background: url(../img/testbg1.webp) center no-repeat; }
 
 .webp .select_form_2 .select__value::before, .webp .select_form_3 .select__value::before{ background: url(../img/icons/FTM-logo.webp) no-repeat center; }
