--- a/css/style.css
+++ b/css/style.css
@@ -1259,19 +1259,23 @@ html.menu-open .menu__list {
           transform: translate(-50%, -50%);
   width: 47.7777777778%;
   padding-bottom: 17.1527777778%;
-  -webkit-filter: blur(200px);
 }
 
 .metrics__blur-bg::after {
+  filter: blur(200px);
+  -webkit-filter: blur(200px);
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+  background: -webkit-gradient(linear, left top, right top, from(#43A1F7), to(#00F79E));
+  background: -o-linear-gradient(left, #43A1F7 0%, #00F79E 100%);
+  background: linear-gradient(to right, #43A1F7 0%, #00F79E 100%);
   position: absolute;
   content: "";
-  z-index: -1;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
-  background: -o-radial-gradient(92.97% 0%, 149.83% 57218.98%, #43A1F7 0%, #00F79E 100%);
-  background: radial-gradient(149.83% 57218.98% at 92.97% 0%, #43A1F7 0%, #00F79E 100%);
 }
 
 .box-metrics {
